--- a/ios/darientapp/Info.plist
+++ b/ios/darientapp/Info.plist
@@ -80,6 +80,6 @@
     <key>UIUserInterfaceStyle</key>
     <string>Automatic</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
-    <false/>
+    <true/>
   </dict>
 </plist>
