--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.7.0",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "@react-native-community/netinfo": "11.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
