--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-webview": "13.13.5",
     "yup": "^1.7.0",
     "zustand": "^5.0.7",
-    "@react-native-community/netinfo": "11.4.1"
+    "@react-native-community/netinfo": "11.4.1",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
